# ComfyUI_Qwen2-VL-Instruct

./: LICENSE  README.md  __init__.py  nodes.py  path_nodes.py  pyproject.toml  requirements.txt  util_nodes.py
examples/: Chat_with_multiple_images_workflow.json  Chat_with_single_image_workflow.json  Chat_with_text_workflow.json  Chat_with_video_workflow.json
web/js/: multiplePathsInput.js
